# ca-ascii

./: Player.hs  README.md  Tree.hs  inf1a-graphics-competition.cabal
animations/: test1.ca  test_dice4.ca  test_dice5.ca  test_dice6.ca  test_dice7.ca  test_dice8.ca  test_dice9.ca
src/: CellAutomaton.hs  GridRenderer.hs  Main.hs  Main2.hs  Recorder.hs  Vector3.hs  animFormat.txt  res.txt  test2.ca  test3.ca
