name:                inf1a-graphics-competition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/inf1a-graphics-competition#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable inf1a-graphics-competition
  ghc-options:         -threaded
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  brick
                    ,  containers
                    ,  linear
                    ,  microlens
                    ,  microlens-th
                    ,  random
                    ,  vty
                    ,  terminal-size
  other-modules:    GridRenderer
                 ,  Tree
                 ,  Vector3
                 ,  CellAutomaton
